@@ -7,7 +7,10 @@ Changes with Apache 2.0.18-dev
      need for THREAD_CPPFLAGS, THREAD_CFLAGS, and OPTIM.  Fix the setting
      of INCLUDES and EXTRA_INCLUDES.  Check flags as they are added to
      avoid pointless duplications.  Fix the order in which flags are given
-     on the compile and link lines.  [Roy Fielding]
+     on the compile and link lines.  Remove obsolete macros APR_DOEXTRA,
+     AC_ADD_LIBRARY, AC_CHECK_DEFINE, APACHE_PASSTHRU, and APACHE_ONCE.
+     Added APR_SAVE_THE_ENVIRONMENT and APR_RESTORE_THE_ENVIRONMENT macros.
+     Renamed AC_TYPE_RLIM_T macro to APACHE_TYPE_RLIM_T.  [Roy Fielding]
 
   *) Get mod_tls to compile/work better on Windows.  PR #7612
      [Bernhard Schrenk <b.schrenk@improx.com>]
